--- a/main.css
+++ b/main.css
@@ -78,60 +78,62 @@ body {
     -webkit-animation: moving-flower-1 4s linear infinite;
     animation: moving-flower-1 4s linear infinite;
 }
-.flower--1.flower_line{
+
+/* FIXED: Added spaces to target child elements */
+.flower--1 .flower_line{
     height: 70vmin;
     -webkit-animation-delay: 0.2s;
     animation-delay: 0.3s;
 }
-.flower--1.flower_line_leaf--1{
-    -webkit-animation: blomming-flower-right var(--fl-speed) 1.6s backwards;
-    animation: blomming-flower-right var(--fl-speed) 1.6s backwards;
+.flower--1 .flower_line_leaf--1{
+    -webkit-animation: blooming-flower-right var(--fl-speed) 1.6s backwards;
+    animation: blooming-flower-right var(--fl-speed) 1.6s backwards;
 }
-.flower--1.flower_line_leaf--2{
-    -webkit-animation: blomming-flower-left var(--fl-speed) 1.4s backwards;
-    animation: blomming-flower-left var(--fl-speed) 1.4s backwards;
+.flower--1 .flower_line_leaf--2{
+    -webkit-animation: blooming-flower-left var(--fl-speed) 1.4s backwards;
+    animation: blooming-flower-left var(--fl-speed) 1.4s backwards;
 }
-.flower--1.flower_line_leaf--3{
-    -webkit-animation: blomming-flower-right var(--fl-speed) 1.2s backwards;
-    animation: blomming-flower-right var(--fl-speed) 1.2s backwards;
+.flower--1 .flower_line_leaf--3{
+    -webkit-animation: blooming-flower-right var(--fl-speed) 1.2s backwards;
+    animation: blooming-flower-right var(--fl-speed) 1.2s backwards;
 }
-.flower--1.flower_line_leaf--4{
-    -webkit-animation: blomming-flower-left var(--fl-speed) 1s backwards;
-    animation: blomming-flower-left var(--fl-speed) 1s backwards;
+.flower--1 .flower_line_leaf--4{
+    -webkit-animation: blooming-flower-left var(--fl-speed) 1s backwards;
+    animation: blooming-flower-left var(--fl-speed) 1s backwards;
 }
-.flower--1.flower_line_leaf--5{
-    -webkit-animation: blomming-flower-right var(--fl-speed) 1.8s backwards;
-    animation: blomming-flower-right var(--fl-speed) 1.8s backwards;
+.flower--1 .flower_line_leaf--5{
+    -webkit-animation: blooming-flower-right var(--fl-speed) 1.8s backwards;
+    animation: blooming-flower-right var(--fl-speed) 1.8s backwards;
 }
-.flower--1.flower_line_leaf--6{
-    -webkit-animation: blomming-flower-left var(--fl-speed) 2s backwards;
-    animation: blomming-flower-left var(--fl-speed) 2s backwards;
+.flower--1 .flower_line_leaf--6{
+    -webkit-animation: blooming-flower-left var(--fl-speed) 2s backwards;
+    animation: blooming-flower-left var(--fl-speed) 2s backwards;
 }
 .flower--2{
     left: 50%;
     transform: rotate(20deg);
     -webkit-animation: moving-flower-2 4s linear infinite;
 }
-.flower--2.flower_line{
+.flower--2 .flower_line{
     height: 60vmin;
     -webkit-animation-delay: 0.6s;
     animation-delay: 0.6s;
 }
-.flower--2.flower_line_leaf--1{
-    -webkit-animation: blomming-flower-right var(--fl-speed) 2.2s backwards;
-    animation: blomming-flower-right var(--fl-speed) 2.2s backwards;
+.flower--2 .flower_line_leaf--1{
+    -webkit-animation: blooming-flower-right var(--fl-speed) 2.2s backwards;
+    animation: blooming-flower-right var(--fl-speed) 2.2s backwards;
 }
-.flower--2.flower_line_leaf--2{
-    -webkit-animation: blomming-flower-left var(--fl-speed) 1.7s backwards;
-    animation: blomming-flower-left var(--fl-speed) 1.7s backwards;
+.flower--2 .flower_line_leaf--2{
+    -webkit-animation: blooming-flower-left var(--fl-speed) 1.7s backwards;
+    animation: blooming-flower-left var(--fl-speed) 1.7s backwards;
 }
-.flower--2.flower_line_leaf--3{
-    -webkit-animation: blomming-flower-right var(--fl-speed) 1.5s backwards;
-    animation: blomming-flower-right var(--fl-speed) 1.5s backwards;
+.flower--2 .flower_line_leaf--3{
+    -webkit-animation: blooming-flower-right var(--fl-speed) 1.5s backwards;
+    animation: blooming-flower-right var(--fl-speed) 1.5s backwards;
 }
-.flower--2.flower_line_leaf--4{
-    -webkit-animation: blomming-flower-left var(--fl-speed) 1.3s backwards;
-    animation: blomming-flower-left var(--fl-speed) 1.3s backwards;
+.flower--2 .flower_line_leaf--4{
+    -webkit-animation: blooming-flower-left var(--fl-speed) 1.3s backwards;
+    animation: blooming-flower-left var(--fl-speed) 1.3s backwards;
 }
 .flower--3 {
     left: 50%;
@@ -139,25 +141,25 @@ body {
     -webkit-animation: moving-flower-3 4s linear infinite;
     animation: moving-flower-3 4s linear infinite;
 }
-.flower--3.flower_line{
+.flower--3 .flower_line{
     -webkit-animation-delay: 0.9s;
     animation-delay: 0.9s;
 }
-.flower--3.flower_line_leaf--1{
-    -webkit-animation: blomming-flower-right var(--fl-speed) 2.5s backwards;
-    animation: blomming-flower-right var(--fl-speed) 2.5s backwards;
+.flower--3 .flower_line_leaf--1{
+    -webkit-animation: blooming-flower-right var(--fl-speed) 2.5s backwards;
+    animation: blooming-flower-right var(--fl-speed) 2.5s backwards;
 }
-.flower--3.flower_line_leaf--2{
-    -webkit-animation: blomming-flower-left var(--fl-speed) 2.3s backwards;
-    animation: blomming-flower-left var(--fl-speed) 2.3s backwards;
+.flower--3 .flower_line_leaf--2{
+    -webkit-animation: blooming-flower-left var(--fl-speed) 2.3s backwards;
+    animation: blooming-flower-left var(--fl-speed) 2.3s backwards;
 }
-.flower--3.flower_line_leaf--3{
-    -webkit-animation: blomming-flower-right var(--fl-speed) 2.1s backwards;
-    animation: blomming-flower-right var(--fl-speed) 2.1s backwards;
+.flower--3 .flower_line_leaf--3{
+    -webkit-animation: blooming-flower-right var(--fl-speed) 2.1s backwards;
+    animation: blooming-flower-right var(--fl-speed) 2.1s backwards;
 }
-.flower--3.flower_line_leaf--4{
-    -webkit-animation: blomming-flower-left var(--fl-speed) 1.9s backwards;
-    animation: blomming-flower-left var(--fl-speed) 1.9s backwards;
+.flower--3 .flower_line_leaf--4{
+    -webkit-animation: blooming-flower-left var(--fl-speed) 1.9s backwards;
+    animation: blooming-flower-left var(--fl-speed) 1.9s backwards;
 }
 .flower_leafs {
     position: relative;
@@ -238,6 +240,7 @@ body {
     width: 60%;
     height: 60%;
     border-radius: inherit;
+    /* FIXED: Added missing commas between all repeating-linear-gradient blocks */
     background-image: repeating-linear-gradient(
         135deg,
         rgba(0, 0, 0, 0.03) 0px,
@@ -255,7 +258,7 @@ body {
     repeating-linear-gradient(
         67.5deg,
         rgba(0, 0, 0, 0.03) 0px,
-        rgba(0, 0, 0, 0.03) 1px
+        rgba(0, 0, 0, 0.03) 1px,
         transparent 1px,
         transparent 12px
     ),
@@ -276,7 +279,7 @@ body {
     repeating-linear-gradient(
         112.5deg,
         rgba(0, 0, 0, 0.03) 0px,
-        rgba(0, 0, 0, 0.03) 1px
+        rgba(0, 0, 0, 0.03) 1px,
         transparent 1px,
         transparent 12px
     ),
@@ -297,49 +300,49 @@ body {
     repeating-linear-gradient(
         22.5deg,
         rgba(0, 0, 0, 0.03) 0px,
-        rgba(0, 0, 0, 0.03) 1px
+        rgba(0, 0, 0, 0.03) 1px,
         transparent 1px,
         transparent 12px
     ),
     repeating-linear-gradient(
         45deg,
         rgba(0, 0, 0, 0.03) 0px,
-        rgba(0, 0, 0, 0.03) 1px
+        rgba(0, 0, 0, 0.03) 1px,
         transparent 1px,
         transparent 12px
     ),
     repeating-linear-gradient(
         22.5deg,
         rgba(0, 0, 0, 0.03) 0px,
-        rgba(0, 0, 0, 0.03) 1px
+        rgba(0, 0, 0, 0.03) 1px,
         transparent 1px,
         transparent 12px
     ),
     repeating-linear-gradient(
         135deg,
         rgba(0, 0, 0, 0.03) 0px,
-        rgba(0, 0, 0, 0.03) 1px
+        rgba(0, 0, 0, 0.03) 1px,
         transparent 1px,
         transparent 12px
     ),
     repeating-linear-gradient(
         157.5deg,
         rgba(0, 0, 0, 0.03) 0px,
-        rgba(0, 0, 0, 0.03) 1px
+        rgba(0, 0, 0, 0.03) 1px,
         transparent 1px,
         transparent 12px
     ),
     repeating-linear-gradient(
         67.5deg,
         rgba(0, 0, 0, 0.03) 0px,
-        rgba(0, 0, 0, 0.03) 1px
+        rgba(0, 0, 0, 0.03) 1px,
         transparent 1px,
         transparent 12px
     ),
     repeating-linear-gradient(
         67.5deg,
         rgba(0, 0, 0, 0.03) 0px,
-        rgba(0, 0, 0, 0.03) 1px
+        rgba(0, 0, 0, 0.03) 1px,
         transparent 1px,
         transparent 12px
     ),
@@ -1539,21 +1542,7 @@ body {
     animation: growing-grass-ans 1s 2s backwards;
 }
 
-@-webkit-keyframes growing-grass-ans {
-    0% {
-        transform: scale(0);
-    }
-}
 
-@keyframes growing-grass-ans {
-    0% {
-        transform: scale(0);
-    }
-}
-.container * {
-    -webkit-animation-play-state: paused !important;
-    animation-play-state: paused !important;
-}
 
 
 
