--- a/main.css
+++ b/main.css
@@ -78,62 +78,61 @@ body {
     -webkit-animation: moving-flower-1 4s linear infinite;
     animation: moving-flower-1 4s linear infinite;
 }
-
-/* FIXED: Added spaces to target child elements */
-.flower--1 .flower_line{
+.flower--1.flower_line{
     height: 70vmin;
     -webkit-animation-delay: 0.2s;
     animation-delay: 0.3s;
 }
-.flower--1 .flower_line_leaf--1{
-    -webkit-animation: blooming-flower-right var(--fl-speed) 1.6s backwards;
-    animation: blooming-flower-right var(--fl-speed) 1.6s backwards;
+.flower--1.flower_line_leaf--1{
+    -webkit-animation: blomming-flower-right var(--fl-speed) 1.6s backwards;
+    animation: blomming-flower-right var(--fl-speed) 1.6s backwards;
 }
-.flower--1 .flower_line_leaf--2{
-    -webkit-animation: blooming-flower-left var(--fl-speed) 1.4s backwards;
-    animation: blooming-flower-left var(--fl-speed) 1.4s backwards;
+.flower--1.flower_line_leaf--2{
+    -webkit-animation: blomming-flower-left var(--fl-speed) 1.4s backwards;
+    animation: blomming-flower-left var(--fl-speed) 1.4s backwards;
 }
-.flower--1 .flower_line_leaf--3{
-    -webkit-animation: blooming-flower-right var(--fl-speed) 1.2s backwards;
-    animation: blooming-flower-right var(--fl-speed) 1.2s backwards;
+.flower--1.flower_line_leaf--3{
+    -webkit-animation: blomming-flower-right var(--fl-speed) 1.2s backwards;
+    animation: blomming-flower-right var(--fl-speed) 1.2s backwards;
 }
-.flower--1 .flower_line_leaf--4{
-    -webkit-animation: blooming-flower-left var(--fl-speed) 1s backwards;
-    animation: blooming-flower-left var(--fl-speed) 1s backwards;
+.flower--1.flower_line_leaf--4{
+    -webkit-animation: blomming-flower-left var(--fl-speed) 1s backwards;
+    animation: blomming-flower-left var(--fl-speed) 1s backwards;
 }
-.flower--1 .flower_line_leaf--5{
-    -webkit-animation: blooming-flower-right var(--fl-speed) 1.8s backwards;
-    animation: blooming-flower-right var(--fl-speed) 1.8s backwards;
+.flower--1.flower_line_leaf--5{
+    -webkit-animation: blomming-flower-right var(--fl-speed) 1.8s backwards;
+    animation: blomming-flower-right var(--fl-speed) 1.8s backwards;
 }
-.flower--1 .flower_line_leaf--6{
-    -webkit-animation: blooming-flower-left var(--fl-speed) 2s backwards;
-    animation: blooming-flower-left var(--fl-speed) 2s backwards;
+.flower--1.flower_line_leaf--6{
+    -webkit-animation: blomming-flower-left var(--fl-speed) 2s backwards;
+    animation: blomming-flower-left var(--fl-speed) 2s backwards;
 }
 .flower--2{
     left: 50%;
     transform: rotate(20deg);
     -webkit-animation: moving-flower-2 4s linear infinite;
+    animation: moving-flower-2 4s linear infinite;
 }
-.flower--2 .flower_line{
+.flower--2.flower_line{
     height: 60vmin;
     -webkit-animation-delay: 0.6s;
     animation-delay: 0.6s;
 }
-.flower--2 .flower_line_leaf--1{
-    -webkit-animation: blooming-flower-right var(--fl-speed) 2.2s backwards;
-    animation: blooming-flower-right var(--fl-speed) 2.2s backwards;
+.flower--2.flower_line_leaf--1{
+    -webkit-animation: blomming-flower-right var(--fl-speed) 2.2s backwards;
+    animation: blomming-flower-right var(--fl-speed) 2.2s backwards;
 }
-.flower--2 .flower_line_leaf--2{
-    -webkit-animation: blooming-flower-left var(--fl-speed) 1.7s backwards;
-    animation: blooming-flower-left var(--fl-speed) 1.7s backwards;
+.flower--2.flower_line_leaf--2{
+    -webkit-animation: blomming-flower-left var(--fl-speed) 1.7s backwards;
+    animation: blomming-flower-left var(--fl-speed) 1.7s backwards;
 }
-.flower--2 .flower_line_leaf--3{
-    -webkit-animation: blooming-flower-right var(--fl-speed) 1.5s backwards;
-    animation: blooming-flower-right var(--fl-speed) 1.5s backwards;
+.flower--2.flower_line_leaf--3{
+    -webkit-animation: blomming-flower-right var(--fl-speed) 1.5s backwards;
+    animation: blomming-flower-right var(--fl-speed) 1.5s backwards;
 }
-.flower--2 .flower_line_leaf--4{
-    -webkit-animation: blooming-flower-left var(--fl-speed) 1.3s backwards;
-    animation: blooming-flower-left var(--fl-speed) 1.3s backwards;
+.flower--2.flower_line_leaf--4{
+    -webkit-animation: blomming-flower-left var(--fl-speed) 1.3s backwards;
+    animation: blomming-flower-left var(--fl-speed) 1.3s backwards;
 }
 .flower--3 {
     left: 50%;
@@ -141,25 +140,25 @@ body {
     -webkit-animation: moving-flower-3 4s linear infinite;
     animation: moving-flower-3 4s linear infinite;
 }
-.flower--3 .flower_line{
+.flower--3.flower_line{
     -webkit-animation-delay: 0.9s;
     animation-delay: 0.9s;
 }
-.flower--3 .flower_line_leaf--1{
-    -webkit-animation: blooming-flower-right var(--fl-speed) 2.5s backwards;
-    animation: blooming-flower-right var(--fl-speed) 2.5s backwards;
+.flower--3.flower_line_leaf--1{
+    -webkit-animation: blomming-flower-right var(--fl-speed) 2.5s backwards;
+    animation: blomming-flower-right var(--fl-speed) 2.5s backwards;
 }
-.flower--3 .flower_line_leaf--2{
-    -webkit-animation: blooming-flower-left var(--fl-speed) 2.3s backwards;
-    animation: blooming-flower-left var(--fl-speed) 2.3s backwards;
+.flower--3.flower_line_leaf--2{
+    -webkit-animation: blomming-flower-left var(--fl-speed) 2.3s backwards;
+    animation: blomming-flower-left var(--fl-speed) 2.3s backwards;
 }
-.flower--3 .flower_line_leaf--3{
-    -webkit-animation: blooming-flower-right var(--fl-speed) 2.1s backwards;
-    animation: blooming-flower-right var(--fl-speed) 2.1s backwards;
+.flower--3.flower_line_leaf--3{
+    -webkit-animation: blomming-flower-right var(--fl-speed) 2.1s backwards;
+    animation: blomming-flower-right var(--fl-speed) 2.1s backwards;
 }
-.flower--3 .flower_line_leaf--4{
-    -webkit-animation: blooming-flower-left var(--fl-speed) 1.9s backwards;
-    animation: blooming-flower-left var(--fl-speed) 1.9s backwards;
+.flower--3.flower_line_leaf--4{
+    -webkit-animation: blomming-flower-left var(--fl-speed) 1.9s backwards;
+    animation: blomming-flower-left var(--fl-speed) 1.9s backwards;
 }
 .flower_leafs {
     position: relative;
@@ -240,7 +239,6 @@ body {
     width: 60%;
     height: 60%;
     border-radius: inherit;
-    /* FIXED: Added missing commas between all repeating-linear-gradient blocks */
     background-image: repeating-linear-gradient(
         135deg,
         rgba(0, 0, 0, 0.03) 0px,
@@ -258,7 +256,7 @@ body {
     repeating-linear-gradient(
         67.5deg,
         rgba(0, 0, 0, 0.03) 0px,
-        rgba(0, 0, 0, 0.03) 1px,
+        rgba(0, 0, 0, 0.03) 1px
         transparent 1px,
         transparent 12px
     ),
@@ -279,7 +277,7 @@ body {
     repeating-linear-gradient(
         112.5deg,
         rgba(0, 0, 0, 0.03) 0px,
-        rgba(0, 0, 0, 0.03) 1px,
+        rgba(0, 0, 0, 0.03) 1px
         transparent 1px,
         transparent 12px
     ),
@@ -300,49 +298,49 @@ body {
     repeating-linear-gradient(
         22.5deg,
         rgba(0, 0, 0, 0.03) 0px,
-        rgba(0, 0, 0, 0.03) 1px,
+        rgba(0, 0, 0, 0.03) 1px
         transparent 1px,
         transparent 12px
     ),
     repeating-linear-gradient(
         45deg,
         rgba(0, 0, 0, 0.03) 0px,
-        rgba(0, 0, 0, 0.03) 1px,
+        rgba(0, 0, 0, 0.03) 1px
         transparent 1px,
         transparent 12px
     ),
     repeating-linear-gradient(
         22.5deg,
         rgba(0, 0, 0, 0.03) 0px,
-        rgba(0, 0, 0, 0.03) 1px,
+        rgba(0, 0, 0, 0.03) 1px
         transparent 1px,
         transparent 12px
     ),
     repeating-linear-gradient(
         135deg,
         rgba(0, 0, 0, 0.03) 0px,
-        rgba(0, 0, 0, 0.03) 1px,
+        rgba(0, 0, 0, 0.03) 1px
         transparent 1px,
         transparent 12px
     ),
     repeating-linear-gradient(
         157.5deg,
         rgba(0, 0, 0, 0.03) 0px,
-        rgba(0, 0, 0, 0.03) 1px,
+        rgba(0, 0, 0, 0.03) 1px
         transparent 1px,
         transparent 12px
     ),
     repeating-linear-gradient(
         67.5deg,
         rgba(0, 0, 0, 0.03) 0px,
-        rgba(0, 0, 0, 0.03) 1px,
+        rgba(0, 0, 0, 0.03) 1px
         transparent 1px,
         transparent 12px
     ),
     repeating-linear-gradient(
         67.5deg,
         rgba(0, 0, 0, 0.03) 0px,
-        rgba(0, 0, 0, 0.03) 1px,
+        rgba(0, 0, 0, 0.03) 1px
         transparent 1px,
         transparent 12px
     ),
@@ -514,7 +512,7 @@ body {
         transparent 30%,
         var(--c)
     );
-    z-index: 100;
+    z-index: 100%;
 }
 .flower_grass_leaf--1 {
     top:-6%;
@@ -754,6 +752,7 @@ body {
         var(--dark-color) 60%
     );
     -webkit-mask-image: linear-gradient(to top, transparent 30%, #079097 60%);
+    mask-image: linear-gradient(to top, transparent 30%, #079097 60%);
 }
 .flower_g-right--1 {
     -webkit-animation: flower-g-right-ans 2.5s linear infinite;
@@ -974,7 +973,7 @@ body {
 .flower_g-fr {
     position: absolute;
     bottom: -4vmin;
-    left: 2vmin;
+    left: vmin;
     transform-origin: bottom left;
     z-index: 10;
     -webkit-animation: flower_g-fr-ans 2s linear infinite;
@@ -1004,6 +1003,7 @@ body {
     border-top-left-radius: 100%;
     border-left: 2vmin solid #079097;
     -webkit-mask-image: linear-gradient(to top, transparent 25%, #079097 50%);
+    mask-image: linear-gradient(to top, transparent 25%, #079097 50%);
     position: relative;
     z-index: 1;
 }
@@ -1022,6 +1022,12 @@ body {
     ),
     linear-gradient(to bottom right, #23f0ff 45%, transparent 50%, transparent);
     -webkit-mask-image: linear-gradient(
+        to bottom right,
+        #159faa 40%,
+        transparent 50%,
+        transparent
+    );
+    mask-image: linear-gradient(
         to bottom right,
         #159faa 40%,
         transparent 50%,
@@ -1160,6 +1166,11 @@ body {
         transparent 40%,
         #079097 80%
     ) !important;
+    mask-image: linear-gradient(
+        to bottom,
+        transparent 40%,
+        #079097 80%
+    ) !important;
 }
 .long-g--1 .leaf--1 {
     --w: 5vmin;
@@ -1181,6 +1192,11 @@ body {
         transparent 50%,
         #079097 80%
     ) !important;
+    mask-image: linear-gradient(
+        to top, 
+        transparent 50%,
+        #079097 80%
+    ) !important;
 }
 .long-g--2 .leaf--1,
 .long-g--3 .leaf--1 {
@@ -1197,6 +1213,11 @@ body {
         transparent 40%,
         #079097 80%
     ) !important;
+    mask-image: linear-gradient(
+        to top,
+        transparent 40%,
+        #079097 80%
+    ) !important;
 }
 .long-g-4 {
     left: 25vmin;
@@ -1206,6 +1227,11 @@ body {
 }
 .long-g-4 .leaf {
     -webkit-mask-image: linear-gradient(
+        to top,
+        transparent 50%,
+        #079097 80%
+    ) !important;
+    mask-image: linear-gradient(
         to top,
         transparent 50%,
         #079097 80%
@@ -1242,6 +1268,11 @@ body {
     border-top-left-radius: 100%;
     border-left: 2vmin solid var(--c);
     -webkit-mask-image: linear-gradient(
+        to top,
+        transparent 20%,
+        var(--dark-color)
+    );
+    mask-image: linear-gradient(
         to top,
         transparent 20%,
         var(--dark-color)
@@ -1542,11 +1573,21 @@ body {
     animation: growing-grass-ans 1s 2s backwards;
 }
 
-/* FIXED: Commented this out so your animations actually play */
-/* .container * {
+@-webkit-keyframes growing-grass-ans {
+    0% {
+        transform: scale(0);
+    }
+}
+
+@keyframes growing-grass-ans {
+    0% {
+        transform: scale(0);
+    }
+}
+.container * {
     -webkit-animation-play-state: paused !important;
     animation-play-state: paused !important;
-} */
+}
 
 
 
