--- a/main.css
+++ b/main.css
@@ -78,34 +78,36 @@ body {
     -webkit-animation: moving-flower-1 4s linear infinite;
     animation: moving-flower-1 4s linear infinite;
 }
-.flower--1.flower_line{
+
+/* FIXED: Added spaces to target child elements */
+.flower--1 .flower_line{
     height: 70vmin;
     -webkit-animation-delay: 0.2s;
     animation-delay: 0.3s;
 }
-.flower--1.flower_line_leaf--1{
-    -webkit-animation: blomming-flower-right var(--fl-speed) 1.6s backwards;
-    animation: blomming-flower-right var(--fl-speed) 1.6s backwards;
+.flower--1 .flower_line_leaf--1{
+    -webkit-animation: blooming-flower-right var(--fl-speed) 1.6s backwards;
+    animation: blooming-flower-right var(--fl-speed) 1.6s backwards;
 }
-.flower--1.flower_line_leaf--2{
-    -webkit-animation: blomming-flower-left var(--fl-speed) 1.4s backwards;
-    animation: blomming-flower-left var(--fl-speed) 1.4s backwards;
+.flower--1 .flower_line_leaf--2{
+    -webkit-animation: blooming-flower-left var(--fl-speed) 1.4s backwards;
+    animation: blooming-flower-left var(--fl-speed) 1.4s backwards;
 }
-.flower--1.flower_line_leaf--3{
-    -webkit-animation: blomming-flower-right var(--fl-speed) 1.2s backwards;
-    animation: blomming-flower-right var(--fl-speed) 1.2s backwards;
+.flower--1 .flower_line_leaf--3{
+    -webkit-animation: blooming-flower-right var(--fl-speed) 1.2s backwards;
+    animation: blooming-flower-right var(--fl-speed) 1.2s backwards;
 }
-.flower--1.flower_line_leaf--4{
-    -webkit-animation: blomming-flower-left var(--fl-speed) 1s backwards;
-    animation: blomming-flower-left var(--fl-speed) 1s backwards;
+.flower--1 .flower_line_leaf--4{
+    -webkit-animation: blooming-flower-left var(--fl-speed) 1s backwards;
+    animation: blooming-flower-left var(--fl-speed) 1s backwards;
 }
-.flower--1.flower_line_leaf--5{
-    -webkit-animation: blomming-flower-right var(--fl-speed) 1.8s backwards;
-    animation: blomming-flower-right var(--fl-speed) 1.8s backwards;
+.flower--1 .flower_line_leaf--5{
+    -webkit-animation: blooming-flower-right var(--fl-speed) 1.8s backwards;
+    animation: blooming-flower-right var(--fl-speed) 1.8s backwards;
 }
-.flower--1.flower_line_leaf--6{
-    -webkit-animation: blomming-flower-left var(--fl-speed) 2s backwards;
-    animation: blomming-flower-left var(--fl-speed) 2s backwards;
+.flower--1 .flower_line_leaf--6{
+    -webkit-animation: blooming-flower-left var(--fl-speed) 2s backwards;
+    animation: blooming-flower-left var(--fl-speed) 2s backwards;
 }
 .flower--2{
     left: 50%;
@@ -113,26 +115,26 @@ body {
     -webkit-animation: moving-flower-2 4s linear infinite;
     animation: moving-flower-2 4s linear infinite;
 }
-.flower--2.flower_line{
+.flower--2 .flower_line{
     height: 60vmin;
     -webkit-animation-delay: 0.6s;
     animation-delay: 0.6s;
 }
-.flower--2.flower_line_leaf--1{
-    -webkit-animation: blomming-flower-right var(--fl-speed) 2.2s backwards;
-    animation: blomming-flower-right var(--fl-speed) 2.2s backwards;
+.flower--2 .flower_line_leaf--1{
+    -webkit-animation: blooming-flower-right var(--fl-speed) 2.2s backwards;
+    animation: blooming-flower-right var(--fl-speed) 2.2s backwards;
 }
-.flower--2.flower_line_leaf--2{
-    -webkit-animation: blomming-flower-left var(--fl-speed) 1.7s backwards;
-    animation: blomming-flower-left var(--fl-speed) 1.7s backwards;
+.flower--2 .flower_line_leaf--2{
+    -webkit-animation: blooming-flower-left var(--fl-speed) 1.7s backwards;
+    animation: blooming-flower-left var(--fl-speed) 1.7s backwards;
 }
-.flower--2.flower_line_leaf--3{
-    -webkit-animation: blomming-flower-right var(--fl-speed) 1.5s backwards;
-    animation: blomming-flower-right var(--fl-speed) 1.5s backwards;
+.flower--2 .flower_line_leaf--3{
+    -webkit-animation: blooming-flower-right var(--fl-speed) 1.5s backwards;
+    animation: blooming-flower-right var(--fl-speed) 1.5s backwards;
 }
-.flower--2.flower_line_leaf--4{
-    -webkit-animation: blomming-flower-left var(--fl-speed) 1.3s backwards;
-    animation: blomming-flower-left var(--fl-speed) 1.3s backwards;
+.flower--2 .flower_line_leaf--4{
+    -webkit-animation: blooming-flower-left var(--fl-speed) 1.3s backwards;
+    animation: blooming-flower-left var(--fl-speed) 1.3s backwards;
 }
 .flower--3 {
     left: 50%;
@@ -140,25 +142,25 @@ body {
     -webkit-animation: moving-flower-3 4s linear infinite;
     animation: moving-flower-3 4s linear infinite;
 }
-.flower--3.flower_line{
+.flower--3 .flower_line{
     -webkit-animation-delay: 0.9s;
     animation-delay: 0.9s;
 }
-.flower--3.flower_line_leaf--1{
-    -webkit-animation: blomming-flower-right var(--fl-speed) 2.5s backwards;
-    animation: blomming-flower-right var(--fl-speed) 2.5s backwards;
+.flower--3 .flower_line_leaf--1{
+    -webkit-animation: blooming-flower-right var(--fl-speed) 2.5s backwards;
+    animation: blooming-flower-right var(--fl-speed) 2.5s backwards;
 }
-.flower--3.flower_line_leaf--2{
-    -webkit-animation: blomming-flower-left var(--fl-speed) 2.3s backwards;
-    animation: blomming-flower-left var(--fl-speed) 2.3s backwards;
+.flower--3 .flower_line_leaf--2{
+    -webkit-animation: blooming-flower-left var(--fl-speed) 2.3s backwards;
+    animation: blooming-flower-left var(--fl-speed) 2.3s backwards;
 }
-.flower--3.flower_line_leaf--3{
-    -webkit-animation: blomming-flower-right var(--fl-speed) 2.1s backwards;
-    animation: blomming-flower-right var(--fl-speed) 2.1s backwards;
+.flower--3 .flower_line_leaf--3{
+    -webkit-animation: blooming-flower-right var(--fl-speed) 2.1s backwards;
+    animation: blooming-flower-right var(--fl-speed) 2.1s backwards;
 }
-.flower--3.flower_line_leaf--4{
-    -webkit-animation: blomming-flower-left var(--fl-speed) 1.9s backwards;
-    animation: blomming-flower-left var(--fl-speed) 1.9s backwards;
+.flower--3 .flower_line_leaf--4{
+    -webkit-animation: blooming-flower-left var(--fl-speed) 1.9s backwards;
+    animation: blooming-flower-left var(--fl-speed) 1.9s backwards;
 }
 .flower_leafs {
     position: relative;
@@ -512,7 +514,7 @@ body {
         transparent 30%,
         var(--c)
     );
-    z-index: 100%;
+    z-index: 100;
 }
 .flower_grass_leaf--1 {
     top:-6%;
@@ -973,7 +975,7 @@ body {
 .flower_g-fr {
     position: absolute;
     bottom: -4vmin;
-    left: vmin;
+    left: 2vmin;
     transform-origin: bottom left;
     z-index: 10;
     -webkit-animation: flower_g-fr-ans 2s linear infinite;
@@ -1584,10 +1586,12 @@ body {
         transform: scale(0);
     }
 }
-.container * {
+
+/* FIXED: Commented this out so your animations actually play */
+/* .container * {
     -webkit-animation-play-state: paused !important;
     animation-play-state: paused !important;
-}
+} */
 
 
 
